Project

General

Profile

Actions

Bug #54576

open

cache tier set proxy faild

Added by changzhi tan about 2 years ago. Updated about 1 year ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
-
Category:
Tiering
Target version:
-
% Done:

100%

Source:
Tags:
backport_processed
Backport:
quincy, pacific
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When I set the proxy mode to remove a writeback cache according to the official documentation [[https://docs.ceph.com/en/latest/rados/operations/cache-tiering/]],
an error occurred:

[root@controller-1 mon]# ceph osd tier cache-mode cachepool proxy
Invalid command: proxy not in writeback|readproxy|readonly|none
osd tier cache-mode <pool> writeback|readproxy|readonly|none [--yes-i-really-mean-it] : specify the caching mode for cache tier <pool>
Error EINVAL: invalid command


Related issues 2 (1 open1 closed)

Copied to RADOS - Backport #59084: quincy: cache tier set proxy faildIn ProgressRadoslaw ZarzynskiActions
Copied to RADOS - Backport #59085: pacific: cache tier set proxy faildResolvedRadoslaw ZarzynskiActions
Actions #1

Updated by Neha Ojha about 2 years ago

  • Project changed from mgr to RADOS
Actions #2

Updated by changzhi tan about 2 years ago

According to the description of the official website document:
REMOVING A WRITEBACK CACHE
Since a writeback cache may have modified data, you must take steps to ensure that you do not lose any recent changes to objects in the cache before you disable and remove it.
Change the cache mode to proxy so that new and modified objects will flush to the backing storage pool.
ceph osd tier cache-mode {cachepool} proxy
For example:
ceph osd tier cache-mode hot-storage proxy

I think proxy mode should stay, otherwise cache pool will still write data.

fix in https://github.com/ceph/ceph/pull/45409

Actions #3

Updated by Radoslaw Zarzynski about 2 years ago

  • Category set to Tiering
Actions #4

Updated by Ilya Dryomov almost 2 years ago

  • Target version deleted (v15.2.16)
Actions #5

Updated by Radoslaw Zarzynski almost 2 years ago

  • Status changed from New to Resolved

Fix merged.

Actions #6

Updated by Radoslaw Zarzynski about 1 year ago

  • Status changed from Resolved to Pending Backport
  • Backport changed from v16.2.7 v17.0.1 to quincy, pacific
Actions #7

Updated by Backport Bot about 1 year ago

Actions #8

Updated by Backport Bot about 1 year ago

Actions #9

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF